--- a/themes/the-letter/css/style.css
+++ b/themes/the-letter/css/style.css
@@ -480,7 +480,7 @@ table tfoot {
 				-webkit-linear-gradient(225deg, transparent 5px, #C4453C 5px),
 				-webkit-linear-gradient(315deg, transparent 5px, #C4453C 5px);
 	background-position: bottom left, bottom right, top right, top left;
-	background-size: 50% 50%;
+	background-size: 51% 50%; /* 51% because Webkit bugs… */
 	background-repeat: no-repeat;
 	box-shadow: 0 -8px 5px -7px rgba(0, 0, 0, 0.5),inset 0 -10px 5px -7px rgba(0, 0, 0, 0.5);
 	border-bottom:1px solid #26150d;
