--- a/themes/the-letter/css/style.css
+++ b/themes/the-letter/css/style.css
@@ -633,6 +633,40 @@ a#toTop:focus {
 }
 
 /**
+ * Typography settings
+ */
+
+h1, h2, h3 {
+	-webkit-font-feature-settings: "dlig";
+	-moz-font-feature-settings: "dlig";
+	-ms-font-feature-settings: "dlig";
+	font-feature-settings: "dlig";
+}
+
+article {
+	-webkit-font-feature-settings: "liga", "kern";
+	-moz-font-feature-settings: "liga", "kern";
+	-ms-font-feature-settings: "liga", "kern";
+	font-feature-settings: "liga", "kern";
+	-webkit-font-feature-settings: "onum", "lnum" off;
+	-moz-font-feature-settings: "onum", "lnum" off;
+	-ms-font-feature-settings: "onum", "lnum" off;
+	font-feature-settings: "onum", "lnum" off;
+}
+
+table {
+	-webkit-font-feature-settings: "tnum", "pnum" off, "frac";
+	-moz-font-feature-settings: "tnum", "pnum" off, "frac";
+	-ms-font-feature-settings: "tnum", "pnum" off, "frac";
+	font-feature-settings: "tnum", "pnum" off, "frac";
+}
+
+abbr {
+	text-transform: lowercase;
+	font-variant: small-caps;
+}
+
+/**
  * Mobile media-queries
  */
 @media screen and (max-width: 768px) {
